fix: add header bg for readability, edit content

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -282,3 +282,36 @@ a:hover,
     height: 100%;
   }
 }
+
+.header-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.3;
+  border-radius: 5px;
+  z-index: 1;
+  background-size: cover;
+  background-position: center;
+}
+@media screen and (min-width: 768px){
+  .header-bg {
+    top: 25% !important;
+    max-height: 50% !important;
+  }
+}
+
+.header-container {
+  position: relative;
+  width: 100%;
+  max-width: 1150px;
+  height: auto;
+}
+
+.header-text {
+    position: relative;
+    z-index: 2;
+    opacity: 1;
+}
